--- a/_includes/my-head.html
+++ b/_includes/my-head.html
@@ -1,5 +1,5 @@
 <!--[if gt IE 8]><!---->
-{% assign google_fonts = site.google_fonts | default:"Roboto+Slab:700|Noto+Sans:400,400i,700,700i" %}
+{% assign google_fonts = site.google_fonts | default:"Nanum+Gothic" %}
 {% capture icons_url %}{% link assets/icomoon/style.css %}{% endcapture %}
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 <script src="/assets/js/subcategories.js"></script>
