--- a/_sass/my-style.scss
+++ b/_sass/my-style.scss
@@ -22,7 +22,7 @@
   padding-bottom:10%;
   margin-top: 60%;
 }
-.sidebar-social {
+.sidebar-social-fixed {
   left: 23%;
   position: absolute;
   display: flex;
