Change comment language

--- a/_includes/body/comments.html
+++ b/_includes/body/comments.html
@@ -12,7 +12,7 @@
         data-emit-metadata="0"
         data-input-position="top"
         data-theme="noborder_light"
-        data-lang="ko"
+        data-lang="en"
         crossorigin="anonymous"
         async>
 </script>
