--- a/_includes/body/sidebar-sticky.html
+++ b/_includes/body/sidebar-sticky.html
@@ -1,7 +1,7 @@
 <div class="sidebar-sticky">
     <div class="sidebar-about">
       <a class="no-hover" href="{{ '/' | relative_url }}" tabindex="-1">
-        <img src="{% include_cached smart-url url='/assets/img/logo.png' %}" class="avatar" alt="{{ site.short_title | default:site.title }}" width="120" height="120" loading="lazy" />
+        <img src="{% include_cached smart-url url='/assets/img/about-img.png' %}" class="avatar" alt="{{ site.short_title | default:site.title }}" width="120" height="120" loading="lazy" />
       </a>
       <a class="sidebar-title" href="{{ '/' | relative_url }}"><h2 class="h1">{{ site.short_title | default:site.title }}</h2></a>
       {% assign text = site.tagline | default:site.description %}
