--- a/_includes/my-head.html
+++ b/_includes/my-head.html
@@ -17,4 +17,13 @@
   };
 </script>
 <script async src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-ZT698MT42Z"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-ZT698MT42Z');
+</script>
 <!--<![endif]-->
