#16 Implement post search (simple-jekyll-search)

--- a/_sass/my-style.scss
+++ b/_sass/my-style.scss
@@ -81,3 +81,14 @@
 .nav-btn {
   border: none;
 }
+#search-input {
+  border: 1.5px solid var(--border-color);
+  border-radius: 5px;
+  outline-offset: 1px;
+  padding-left: 18px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+}
+#search-input::placeholder {
+  color: rgb(229, 229, 229);
+}
