style: change fonts
- Pretendard, D2Coding

--- a/_includes/my-head.html
+++ b/_includes/my-head.html
@@ -1,3 +1,6 @@
+<!-- Web Font -->
+<link rel="stylesheet" href="/assets/css/web-font.css">
+
 <!--[if gt IE 8]><!---->
 {% assign google_fonts = site.google_fonts | default:"Nanum+Gothic" %}
 {% capture icons_url %}{% link assets/icomoon/style.css %}{% endcapture %}
@@ -17,6 +20,7 @@
   };
 </script>
 <script async src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
+
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-ZT698MT42Z"></script>
 <script>
